--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.0.4",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "mobx": "^5.9.4",
+    "mobx-react": "^6.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "semantic-ui-react": "^0.87.1",
     "typescript": "3.5.1"
   },
   "scripts": {
